# remontoire

./: .gitignore  README.md  meson.build  org.gnome.Remontoire.json  window.vala
.github/workflows/: pkg-change-broadcast.yml  prepare-release.yml  publish-unstable.yml
data/: meson.build  org.gnome.Remontoire.appdata.xml.in  org.gnome.Remontoire.desktop.in  org.gnome.Remontoire.gschema.xml  org.regolith-linux.remontoire.appdata.xml.in  org.regolith-linux.remontoire.desktop.in  org.regolith-linux.remontoire.gschema.xml  style.css  style.xml
debian/: changelog  control  copyright
po/: POTFILES  meson.build
src/: arg_parser.vala  cell_renderer_example.vala  config_parser.vala  grelier.vala  helper.vala  main.vala  meson.build  slider_window.vala  window.vala
vapi/: grelier.vapi
